--- a/latihan2/halaman1.html
+++ b/latihan2/halaman1.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Belajar Pemrograman Web">
+    <meta name="keywords" content="HTML, CSS, Javascript">
+    <meta name="author" content="Alman Muhammadin">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halaman 1</title>
